--- a/src/index.html
+++ b/src/index.html
@@ -11,40 +11,40 @@
 
 <body>
   <main
-    class="bg-[url('/assets/background/desktop.png')] h-screen w-screen bg-cover bg-no-repeat overflow-hidden relative">
+    class="bg-[url('/assets/background/mobile.png')] bg-center lg:bg-[url('/assets/background/desktop.png')] h-screen w-screen bg-cover bg-no-repeat overflow-hidden relative">
     <!-- stars -->
     <div class="animate-[spin_15s_linear_infinite] absolute top-[20%] left-[15%]">
-      <img class="w-16 animate-twinkle" src="assets/elements/green_star.svg" alt="green star">
+      <img class="w-8 lg:w-16 animate-twinkle" src="assets/elements/green_star.svg" alt="green star">
     </div>
     <div class="animate-[spin_15s_linear_infinite] absolute top-[80%] left-[5%]">
-      <img class="w-12 animate-twinkle rotate-[30deg]" src="assets/elements/green_star.svg" alt="green star">
+      <img class="w-6 lg:w-12 animate-twinkle rotate-[30deg]" src="assets/elements/green_star.svg" alt="green star">
     </div>
     <div class="animate-[spin_15s_linear_infinite] absolute top-[75%] left-[80%]">
-      <img class="w-12 animate-twinkle rotate-45" src="assets/elements/green_star.svg" alt="green star">
+      <img class="w-6 lg:w-12 animate-twinkle rotate-45" src="assets/elements/green_star.svg" alt="green star">
     </div>
     <div class="animate-[spin_15s_linear_infinite] absolute top-[45%] left-[18%]">
-      <img class="w-16 animate-twinkle rotate-[60deg]" src="assets/elements/white_star.svg" alt="white star">
+      <img class="w-8 lg:w-16 animate-twinkle rotate-[60deg]" src="assets/elements/white_star.svg" alt="white star">
     </div>
     <div class="animate-[spin_15s_linear_infinite] absolute top-[90%] left-[65%]">
-      <img class="w-12 animate-twinkle rotate-12" src="assets/elements/white_star.svg" alt="white star">
+      <img class="w-6 lg:w-12 animate-twinkle rotate-12" src="assets/elements/white_star.svg" alt="white star">
     </div>
     <div class="animate-[spin_15s_linear_infinite] absolute top-[40%] left-[85%]">
-      <img class="w-12 animate-twinkle rotate-45" src="assets/elements/white_star.svg" alt="white star">
+      <img class="w-6 lg:w-12 animate-twinkle rotate-45" src="assets/elements/white_star.svg" alt="white star">
     </div>
     <!-- rings -->
-    <div class="translate-y-72 pointer-events-none select-none">
-      <div class="animate-[spin_13s_linear_infinite] absolute">
-        <img class="scale-125" src="assets/elements/ring-group-3-1-2.png" alt="rings">
+    <div class="pointer-events-none select-none">
+      <div class="animate-[spin_13s_linear_infinite] absolute top-[36rem] lg:top-72">
+        <img class="scale-[1.8] lg:scale-125" src="assets/elements/ring-group-3-1-2.png" alt="rings">
       </div>
     </div>
-    <div class="translate-y-64 pointer-events-none select-none">
-      <div class="animate-[spin_17s_linear_infinite] absolute">
-        <img class="scale-125" src="assets/elements/ring-group-3-2-2.png" alt="rings">
+    <div class="pointer-events-none select-none">
+      <div class="animate-[spin_17s_linear_infinite] absolute top-[36rem] lg:top-64">
+        <img class="scale-[1.8] lg:scale-125" src="assets/elements/ring-group-3-2-2.png" alt="rings">
       </div>
     </div>
-    <div class="translate-y-72 pointer-events-none select-none">
-      <div class="animate-[spin_23s_linear_infinite] absolute">
-        <img class="scale-125" src="assets/elements/ring-group-3-3-2.png" alt="rings">
+    <div class="pointer-events-none select-none">
+      <div class="animate-[spin_23s_linear_infinite] absolute top-[36rem] lg:top-72">
+        <img class="scale-[1.8] lg:scale-125" src="assets/elements/ring-group-3-3-2.png" alt="rings">
       </div>
     </div>
   </main>
